2008-08-30 Guido Scholz <guido.scholz@bayernline.de>
	* modularsynth.cpp: Prevent double inport connection. Beep
	instead of error message if user tries wrong connection. Fix
	resorting of recently opened files list.

2008-08-29 Guido Scholz <guido.scholz@bayernline.de>
	* modularsynth.*, module.*, port.*: List of ports now is private
	to module, port selection rewritten.

2008-08-27 Guido Scholz <guido.scholz@bayernline.de>
	* synthdata.*: Fixed crash caused by Alsa SND_SEQ_EVENT_SYSEX
	events.
	* midicontrollerlist.*: Empty files removed.
	* midicontroller.*: Possible fix for broken MIDI event type
	transformation if type values are > 127 (changed "int" to
	"unsigned int"). Untested.
	* modularsynth.cpp: Application name added to MIDI in/out port
	name.

2008-08-17 Guido Scholz <guido.scholz@bayernline.de>
	* INSTALL: File replaced by generic file which comes with the
	autotools set.

2008-07-27 Guido Scholz <guido.scholz@bayernline.de>
	* whole package: Sourcecode files moved to new src subdirectory
	and newly developed autotools framework added.
	* man/ams.1: Lost man page added.

2008-07-15 Guido Scholz <guido.scholz@bayernline.de>
	* mainwindow.cpp, modularsynth.cpp: Menu for recently opened
	files added.
	* *.cpp, ams_de.ts: Most strings are made translatable and a
	German translation is added. Keyboard shortcuts added, where
	ever possible.

2008-07-12 Guido Scholz <guido.scholz@bayernline.de>
	* main.cpp: Support for Qt library translations added.
	* mainwindow.cpp: Application icon added.

2008-07-09 Guido Scholz <guido.scholz@bayernline.de>
	* main.cpp, mainwindow.*, modularsynth.*: "File save as" function
	implemented.

2008-06-17 Guido Scholz <guido.scholz@bayernline.de>
	* ringbuffer.h: Adapt atomic operations to new Qt 4.4 interface
