@@ -22,24 +22,28 @@
 .\"
 .TH AlsaModularSynth 1 "November 2003"
 .SH NAME
-AlsaModularSynth (AMS) - A software synthesizer modeled after modular patching synthesizers
+AlsaModularSynth (AMS) - A software synthesizer modeled after modular
+patching synthesizers
 .SH SYNOPSIS
 .BI "ams [" OPTIONS "]"
 .SH DESCRIPTION
 The
 .B AlsaModularSynth
-(AMS) is a software synthesizer designed after the great analog modular synths of the 1960s. It employs
-virtual control voltages (VC) for each module's parameter control, using the the 
+(AMS) is a software synthesizer designed after the great analog modular
+synths of the 1960s. It employs virtual control voltages (VC) for each
+ module's parameter control, using the the 
 .B Moog
-synthesizer's 1V/oct logarithmic control scale for its oscillator and filter functions.
+synthesizer's 1V/oct logarithmic control scale for its oscillator and
+filter functions.
 
 Following the modular synth model
 .B AMS
-supplies the user with a variety of sound-producing and sound-processing software modules
-such as digital oscillators, filters, amplifiers, and DSP effects. These modules are linked together
-(patched) to create complex audio synthesis networks. These network patches can be played in
-realtime via MIDI or internal control structures, and they may be saved and reloaded at will.
-
+supplies the user with a variety of sound-producing and sound-processing
+software modules such as digital oscillators, filters, amplifiers, and
+DSP effects. These modules are linked together (patched) to create
+complex audio synthesis networks. These network patches can be played in
+realtime via MIDI or internal control structures, and they may be saved
+and reloaded at will.  
 .SH OPTIONS
 Runtime options for
 .B AMS
